@startuml
title Sơ đồ quan hệ các model chính trong hệ thống

skinparam defaultFontName Arial
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam wrapWidth 180

class User {
  username
  email
  role
  favorites
}

class Place {
  placeId
  name
  address
  lat/lng
  category
  tags
}

class Review {
  rating
  comment
  images
}

class ReviewImageSubmission {
  imageUrl
  status
  reviewedAt
}

class Category {
  name
  active
}

class Tag {
  name
  nameNorm
}

class Booking {
  code
  visitDate
  totalAmount
  status
}

class Payment {
  provider
  status
  amount
  orderRef
}

class PaymentLog {
  event
  idempotencyKey
  valid
}

class Ticket {
  code
  status
  qrPayload
  usedAt
}

class TicketType {
  name
  audience
  price
  active
}

class Notification {
  title
  message
  read
}

User "1" --> "0..*" Review : viết
Place "1" --> "0..*" Review : nhận
Review "1" --> "0..*" ReviewImageSubmission : có ảnh gửi
User "1" --> "0..*" ReviewImageSubmission : gửi ảnh đánh giá
User "1" --> "0..*" ReviewImageSubmission : kiểm duyệt ảnh\n(role admin)

Category "1" --> "0..*" Place : phân loại
Place "1" --> "0..*" TicketType : có loại vé

User "1" --> "0..*" Booking : đặt
Place "1" --> "0..*" Booking : được đặt
Booking "1" --> "0..1" Payment : thanh toán
Payment "1" --> "0..*" PaymentLog : ghi log
Booking "1" --> "0..*" Ticket : phát hành
TicketType "1" --> "0..*" Ticket : định loại
User "1" --> "0..*" Ticket : sở hữu
Place "1" --> "0..*" Ticket : thuộc địa điểm
User "1" --> "0..*" Notification : nhận

Place .. Tag : sử dụng tag dạng tên
User .. Place : favorites lưu placeId

@enduml
